# tamper_detection_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_1.txt  run.py  train.py
config/: params.py  paths.py
data/: dataset.py  preprocess.py
doc/: 01图像篡改检测学习研究项目产品方案.md  02图像篡改检测学习研究项目技术文档.md  03根据技术文档AI生成的项目代码.md
frontend/: app.py
inference/: model_loader.py  predictor.py
models/: pscc_net.py  resnet18.py
resources/: EREADME.md  chooseData.py
train/: train_pscc.py  train_resnet.py
utils/: logger.py  metrics.py
